# pandora-scheduler

./: .gitignore  LICENSE  README.md  confirm_XML_visibility.py  environment_pandora_062025.yml  pandora.yml  pyproject.toml  xml_to_visibility_figure.py
scripts/: vis_calc.py
src/pandora_scheduler/: __init__.py  barycorr.py  transits.py  vis_calc.py
src/pandora_scheduler/data/: .gitattributes  target_partner_list.csv
src/pandorascheduler/: __init__.py  check_lost_days.py  confirm_XML_visibility.py  helper_code.py  helper_codes.py  helper_codes_092624.py  helper_codes_aux.py  helper_codes_claude.py  sched2xml.py  sched2xml_WIP.py  sched2xml_claude.py  sched2xml_claude_WORKING.py  sched2xml_last.py  sched2xml_last_claude_broken.py  scheduler.py  scheduler_110524.py  scheduler_deprioritize_070325.py  scheduler_deprioritize_102925.py  scheduler_deprioritize_WIP.py  scheduler_deprioritize_test.py  scheduler_deprioritize_test_BACKUP.py  scheduler_deprioritize_test_BACKUP_DO_NOT_CHANGE.py  scheduler_deprioritize_test_WIP.py  test_xml.py  transits.py  xml_to_visibility_figure.py
src/pandorascheduler/backup/: confirm_XML_visibility_BACKUP.py  get_targets.py  helper_codes_claude_091124.py  helper_codes_claude_BACKUP.py  sched2xml.py  sched2xml_030524.py  sched2xml_031124.py  sched2xml_031224.py  sched2xml_031324.py  sched2xml_050525.py  sched2xml_061525.py  sched2xml_090524.py  sched2xml_OLD.py  sched2xml_WIP_BROKEN.py  sched2xml_claude_091024_DONOTCHANGE.py  sched2xml_claude_091124.py  sched2xml_claude_120924.py  sched2xml_claude_BROKEN.py  sched2xml_last_090924.py  sched2xml_last_claude_MAYBE_WORKING.py  (+14 more)
(+39 files in other folders)
