[tool.poetry]
name = "pandora-scheduler"
version = "0.1.0"
description = "Tool to schedule Pandora observations"
authors = ["Trevor Foote <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pandora_scheduler"}]

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
numpy = "^1.23"
astropy = "^5.0"
pandas = "^1.5"
progressbar = "^2.5"
matplotlib = "^3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
