[tool.poetry]
name = "pandorascheduler"
version = "0.1.0"
description = "Tool to schedule Pandora observations"
authors = ["Trevor Foote <you@example.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.8, <4.0"
numpy = "^1.23"
astropy = "^5.0"
pandas = "^1.5"
progressbar = "^2.5"
matplotlib = "^3.5"

[tool.poetry.group.dev.dependencies]
ipython = "^8.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
